--- a/latex_template/mims_coversheet.ltx
+++ b/latex_template/mims_coversheet.ltx
@@ -2,7 +2,7 @@
 % ---
 \documentclass[12pt]{article}
 
-% Packages
+% Packages from the ETH's template
 % ---  
 \usepackage[a4paper, left=25 mm, right=25 mm, top=20 mm, bottom=20 mm]{geometry} % A4 size
 \usepackage{amsmath}           % Advanced math typesetting
@@ -11,17 +11,15 @@
 \usepackage{xunicode}
 \usepackage{xltxtra}
 \usepackage{lmodern}
-\usepackage[ngerman,english]{babel}    % Change hyphenation rules
-\usepackage{hyperref}          % Add a link to your document
+\usepackage[english]{babel}    % Change hyphenation rules
+\usepackage[unicode]{hyperref} % Add a link to your document
 \usepackage{graphicx}          % Add pictures to your document
 \usepackage{listings}          % Source code formatting and highlighting
 \usepackage{tabularx}          % Table environment for stretched tables
 \usepackage{textgreek}         % Greek characters
 
-% Specify paths so that the punter doesn't have to
-\def\input@path{ {/usr/share/eprints3/archives/mims3/cfg/static/texmf/} }
+% Man Uni stuff
 \graphicspath{ {/usr/share/eprints3/archives/mims3/cfg/static/images/} }
-
 \usepackage{MIMS_EPrint}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
